<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Nearby Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="LoginEmail">E-Mail</string>
    <string name="LoginPassword">Password</string>
    <string name="BtnTextSignin">SIGN IN</string>
    <string name="LoginScreenDonthaveaccount">Don\'t have an account ?</string>
    <string name="LoginTextSignup">SIGN UP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_document_key">user_key</string>
    <!-- Strings used for fragments for navigation -->







    <string-array name="Bikes">



    </string-array>
    <string-array name="Animals_Pets">



    </string-array>
    <string-array name="Furniture_HomeDecor">

    </string-array>
    <string-array name="Fashion_Beauty">

    </string-array>
    <string-array name="Books_Sports">



    </string-array>
    <string-array name="KidsFurniture_Accessories">


    </string-array>


</resources>
